--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,20 @@
 envlist = py36
 
 [testenv]
-deps =
-    pytest
-    click
+deps = pytest
+    autopep8
+    tox
+    flake8
+    pexpect
     pyspin
+    click
+    venv_tools
+    virtualenv-api
+    packaging
 
 commands =
     pip install -U pip
-    py.test
+    pip install -e .
+    py.test {posargs}
 
 norecursedirs = python_modules .tox
