--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": true,
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -10,5 +11,6 @@
     "**/nip.egg-info": true,
     "**/.DS_Store": true
   },
-  "python.pythonPath": "${workspaceFolder}/python_modules/bin/python"
+  "python.pythonPath": "${workspaceFolder}/python_modules/bin/python",
+  "nip-scripts.showStartNotification": false
 }
